--- a/CS157A Project/src/main/webapp/css/style.css
+++ b/CS157A Project/src/main/webapp/css/style.css
@@ -12,6 +12,11 @@ nav{
 
 }
 
+.hello{
+	display: flex;
+	flex-direction: column;
+}
+
 form{
 	width: 40%;
 	height: 75%;
@@ -30,21 +35,23 @@ nav input{
 }
 
 nav button{
-	font-size: 20px;
+	font-size: 15px;
 	border: transparent;
-	border-radius: 7px;
+	border-radius: 30px;
+	padding: 15px;
 	
 }
 
-nav ul{
+.nav-list{
 	height: 75%;
-	font-size: 20px;
+	font-size: 15px;
 	display: flex;
 	width: 500px;
 	min-width: 400px;
 	justify-content: space-between;
 	list-style-type: none;
 	padding-left: 0;
+	align-items: center;
 }
 
 form i{
@@ -57,6 +64,31 @@ form i{
 nav ul, footer ul{
 	list-style:none;
 
+}
+
+.dropdown-content{
+	display: none;
+	position: absolute;
+	
+	z-index: 1;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+
+  padding: 12px 12px;
+  font-size: 15px;
+  display: block;
+  text-align: center;
+  
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 
@@ -97,3 +129,4 @@ nav h1, footer h1{
 	font-family: 'Jeju Myeongjo', serif;
 	font-size: 45px;
 }
+
