--- a/CS157A Project/src/main/webapp/css/home.css
+++ b/CS157A Project/src/main/webapp/css/home.css
@@ -1,34 +1,47 @@
-.category-container{
-	padding: 100px;
-}
-
-.category-container h2{
-	font-family: "Arial";
-}
-
-.category-container ul {
+.category-container {
+	margin: 50px 100px;
 	display: flex;
 	flex-wrap: wrap;
-	list-style:none;
-	justify-content: space-between;
-	padding: 0px;
+	justify-content: center;
 	
 }
 
-.category-container li {
-	background-color: #D9D9D9;
+h2 {
+	font-family: "Arial";
+	padding: 0 100px;
+}
+
+
+
+
+.container{
+	position: relative;
 	width: 200px;
 	height: 200px;
-	margin: 20px 25px;
+	margin: 20px 40px;
+
+	
 }
 
-.hero-container{
-	background-color: #D9D9D9;
-	height: 500px;
-	margin: 0px 100px; 
+.container p{
+	position: absolute;
+	top: 35%;
+	left: 35%;
+	font-family: "Arial";
 }
 
-.about-container{
+
+.hero-container {
+	margin: 40px 100px;
+	
+}
+
+.hero-container img {
+	width: 100%;
+	border-radius: 20px;
+}
+
+.about-container {
 	background-color: #D9D9D9;
 	height: 500px;
 }
