--- a/CS157A Project/src/main/webapp/css/style.css
+++ b/CS157A Project/src/main/webapp/css/style.css
@@ -3,11 +3,21 @@ nav, .nav-list{
 	display: flex;
 }
 
+.logo-container{
+	display: flex;
+	align-items: center;
+}
+
+.logo-container img{
+	width: 46px;
+	height: 46px;
+}
+
 nav{
 	display: flex;
 	justify-content: space-between;
 	font-family: 'Arial';
-	align-items: baseline;
+	align-items: center;
 	padding: 0px 100px;
 
 }
@@ -98,6 +108,7 @@ footer{
 	padding: 0px 100px;
 	font-size: 15px;
 }
+
 
 
 .footer-container{
