--- a/CS157A Project/src/main/webapp/css/home.css
+++ b/CS157A Project/src/main/webapp/css/home.css
@@ -3,15 +3,12 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	
 }
 
-h2 {
+.browseHeader {
 	font-family: "Arial";
 	padding: 0 100px;
 }
-
-
 
 
 .container{
@@ -19,20 +16,26 @@ h2 {
 	width: 200px;
 	height: 200px;
 	margin: 20px 40px;
-
-	
 }
+
 
 .container p{
 	position: absolute;
-	top: 35%;
-	left: 35%;
+	text-align: center;
 	font-family: "Arial";
+	width: 100%;
+	top: 95%;
+}
+
+.container img{
+	border-radius: 20px;
 }
 
 
 .hero-container {
 	margin: 40px 100px;
+	position: relative;
+	font-family: "Arial";
 	
 }
 
@@ -41,7 +44,56 @@ h2 {
 	border-radius: 20px;
 }
 
+.hero-container div{
+	position: absolute;
+	top: 25%;
+	left: 70%;
+	
+}
+
+.hero-container h2{
+	font-size: 35px;
+}
+
+.hero-container button{
+	border: solid white;
+	height: 40px;
+	width: 100px;
+	border-radius: 20px;
+	background-color: white;
+}
+
 .about-container {
-	background-color: #D9D9D9;
-	height: 500px;
+	background-color: #f9d349;
+	height: 300px;
+	margin: 120px 0px;
+	font-family: "Arial";
+	display: flex;
+	justify-content: center;
+	padding: 50px;
+	border-radius: 20px;
+}
+
+.aboutInfo{
+	display: flex;
+	flex-direction: column;
+	width: 30%;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding-left: 200px;
+}
+
+.about-container button{
+	border: solid white;
+	height: 40px;
+	width: 100px;
+	border-radius: 20px;
+	margin: 20px 20px;
+	color: #f9d349;
+	background-color: white;
+}
+
+.about-container h2{
+	color: #fff;
 }
