Added Edit Profile Function

--- a/CS157A Project/src/main/webapp/css/home.css
+++ b/CS157A Project/src/main/webapp/css/home.css
@@ -64,7 +64,7 @@
 }
 
 .about-container {
-	background-color: #f9d349;
+	background-color: #fdd301;
 	height: 300px;
 	margin: 120px 0px;
 	font-family: "Arial";
@@ -90,7 +90,7 @@
 	width: 100px;
 	border-radius: 20px;
 	margin: 20px 20px;
-	color: #f9d349;
+	color: #fdd301;
 	background-color: white;
 }
 
