--- a/CS157A Project/src/main/webapp/css/style.css
+++ b/CS157A Project/src/main/webapp/css/style.css
@@ -19,6 +19,11 @@ nav{
 	font-family: 'Arial';
 	align-items: center;
 	padding: 0px 100px;
+	position: fixed;
+	top: 0;
+	width: 87%;
+	z-index: 1;
+	background-color: white;
 
 }
 
@@ -33,6 +38,7 @@ form{
 	display: flex;
 	justify-content: center;
 	position: relative;
+	margin: 0px;
 }
 nav input{
 	border-radius: 7px;
@@ -44,12 +50,33 @@ nav input{
 	font-size: 15px;
 }
 
-nav button{
+.dropdown+form{
+	width: 100px;
+}
+
+nav input[value = "Log Out"]{
 	font-size: 15px;
 	border: transparent;
 	border-radius: 30px;
 	padding: 15px;
+	width: 100px;
+	display: flex;
+	justify-content: center;
+	padding: 0px;
+	background-color: #efefef;
 	
+}
+
+nav button{
+	font-size: 15px;
+	border: transparent;
+	border-radius: 30px;
+	padding: 10px;
+	
+}
+
+#saveChanges{
+	margin: 20px;
 }
 
 .nav-list{
