--- a/CS157A Project/src/main/webapp/css/product.css
+++ b/CS157A Project/src/main/webapp/css/product.css
@@ -40,7 +40,6 @@ textarea{
 	width: 100%;
 }
 .filter-container {
-	margin: 100px 0px;
 	padding: 0px 100px;
 }
 
@@ -91,8 +90,13 @@ input[type=submit]{
 	font-family: "Arial";
 }
 
-.product {
-	
+.headerProducts{
+	margin-top: 150px;
+}
+
+.product{
+	border: 1px solid black;
+	border-radius: 4px;
 	width: 240px;
 	height: 240px;
 	margin: 20px 0px;
