--- a/CS157A Project/src/main/webapp/css/cart.css
+++ b/CS157A Project/src/main/webapp/css/cart.css
@@ -1,3 +1,22 @@
 .cart-container{
-	margin-top: 150px;
+	margin: 150px 100px 50px 100px;
+	border-radius: 4px;
+	font-family: "Arial";
+	padding: 50px;
+	border: solid 1px #D9D9D9;
+}
+
+input[type = "submit"]{
+	border-radius: 20px;
+	width: 130px;
+	height: 50px;
+	border: solid #D9D9D9 1px;	
+	margin-top: 50px;
+}
+
+.product-container{
+	border: solid #D9D9D9 1px;	
+	border-radius: 4px;
+	margin: 5px;
+	padding: 20px;
 }
