--- a/CS157A Project/src/main/webapp/css/order.css
+++ b/CS157A Project/src/main/webapp/css/order.css
@@ -5,3 +5,20 @@
 	border: solid #d9d9d9 1px;
 	border-radius: 4px;
 }
+
+
+.order{
+	padding: 25px;
+	border: solid #d9d9d9 1px;
+	border-radius: 4px;
+	margin-top: 5px;
+	
+}
+.order-item{
+	display: flex;
+	flex-direction: column;
+	margin: 0px;
+	margin: none;
+	padding:0px;
+	
+}
